--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -40,6 +40,14 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	
+	<servlet>
+		<description>JAX-WS endpoint - UpdateCatalog</description>
+		<display-name>UpdateCatalog</display-name>
+		<servlet-name>UpdateCatalogPort</servlet-name>
+		<servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	
 	<servlet-mapping>
 		<servlet-name>OrderServicePort</servlet-name>
 		<url-pattern>/OrderService</url-pattern>
