--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -39,7 +39,7 @@
 		<servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	<!--  
+	
 	<servlet>
 		<description>JAX-WS endpoint - UpdateCatalog</description>
 		<display-name>UpdateCatalog</display-name>
@@ -47,10 +47,15 @@
 		<servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	-->
+
 	<servlet-mapping>
 		<servlet-name>OrderServicePort</servlet-name>
 		<url-pattern>/OrderService</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>UpdateCatalog</servlet-name>
+		<url-pattern>/UpdateCatalog</url-pattern>
 	</servlet-mapping>
 
   <welcome-file-list>
